@@ -1,6 +1,9 @@
 package org.molgenis.semanticmapper.controller;
 
-import com.google.common.collect.*;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Iterables;
+import com.google.common.collect.Multimap;
+import com.google.common.collect.Sets;
 import org.apache.commons.lang3.StringUtils;
 import org.molgenis.core.ui.data.importer.wizard.ImportWizardController;
 import org.molgenis.core.ui.jobs.JobsController;
@@ -350,9 +353,7 @@ public class MappingServiceController extends PluginController
 		MappingProject mappingProject = mappingService.getMappingProject(mappingProjectId);
 		MappingTarget mappingTarget = mappingProject.getMappingTarget(target);
 		List<String> sourceNames = mappingTarget.getEntityMappings()
-												.stream()
-												.map(i -> i.getSourceEntityType().getId())
-												.collect(Collectors.toList());
+												.stream().map(i -> i.getSourceEntityType().getId()).collect(toList());
 
 		EntityType targetEntityMeta = mappingTarget.getTarget();
 		for (Attribute attribute : targetEntityMeta.getAtomicAttributes())
@@ -481,7 +482,7 @@ public class MappingServiceController extends PluginController
 		List<Attribute> sourceAttributes = generateAlgorithmRequest.getSourceAttributes()
 																   .stream()
 																   .map(sourceEntityType::getAttribute)
-																   .collect(Collectors.toList());
+																   .collect(toList());
 
 		String generateAlgorithm = algorithmService.generateAlgorithm(targetAttribute, targetEntityType,
 				sourceAttributes, sourceEntityType);
@@ -676,7 +677,7 @@ public class MappingServiceController extends PluginController
 				{
 					EntityType sourceEntityType = entityMapping.getSourceEntityType();
 					return sourceEntityType.getAttribute(attributeName);
-				}).filter(Objects::nonNull).collect(Collectors.toList());
+				}).filter(Objects::nonNull).collect(toList());
 
 				model.addAttribute("sourceAttributes", sourceAttributes);
 			}
@@ -691,9 +692,9 @@ public class MappingServiceController extends PluginController
 		model.addAttribute("source", source);
 		model.addAttribute("targetAttribute", dataService.getEntityType(target).getAttribute(targetAttribute));
 
-		FluentIterable<Entity> sourceEntities = FluentIterable.from(() -> dataService.findAll(source).iterator())
-															  .limit(10);
-		ImmutableList<AlgorithmResult> algorithmResults = sourceEntities.transform(sourceEntity ->
+		Stream<Entity> sourceEntities = dataService.findAll(source).limit(10);
+
+		List<AlgorithmResult> algorithmResults = sourceEntities.map(sourceEntity ->
 		{
 			try
 			{
@@ -705,7 +706,7 @@ public class MappingServiceController extends PluginController
 			{
 				return AlgorithmResult.createFailure(e, sourceEntity);
 			}
-		}).toList();
+		}).collect(toList());
 		model.addAttribute("feedbackRows", algorithmResults);
 
 		long missing = algorithmResults.stream().filter(r -> r.isSuccess() && r.getValue() == null).count();
@@ -894,12 +895,11 @@ public class MappingServiceController extends PluginController
 
 	/**
 	 * Generate algorithms based on semantic matches between attribute tags and descriptions
-	 *
+	 * <p>
 	 * protected for testablity
 	 */
 	protected void autoGenerateAlgorithms(EntityMapping mapping, EntityType sourceEntityType,
-			EntityType targetEntityType,
-			Iterable<Attribute> attributes, MappingProject project)
+			EntityType targetEntityType, Iterable<Attribute> attributes, MappingProject project)
 	{
 		StreamSupport.stream(attributes.spliterator(), false)
 					 .filter(attribute -> attribute.getExpression() == null)
@@ -918,7 +918,7 @@ public class MappingServiceController extends PluginController
 		return StreamSupport.stream(dataService.getEntityTypeIds().spliterator(), false)
 							.filter(name -> isValidSource(target, name))
 							.map(dataService::getEntityType)
-							.collect(Collectors.toList());
+							.collect(toList());
 	}
 
 	private static boolean isValidSource(MappingTarget target, String name)
@@ -936,8 +936,7 @@ public class MappingServiceController extends PluginController
 		return getEntityTypes().stream()
 							   .filter(emd -> !emd.isAbstract())
 							   .filter(emd -> dataService.getCapabilities(emd.getId())
-														 .contains(RepositoryCapability.WRITABLE))
-							   .collect(Collectors.toList());
+														 .contains(RepositoryCapability.WRITABLE)).collect(toList());
 	}
 
 	private Map<String, List<OntologyTerm>> getTagsForAttribute(String target, MappingProject project)
